--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
 
 .App nav .current {
   font-weight: bold;
+  color: #0cf343
 }
 
 .App main {
@@ -21,4 +22,9 @@ body {
 .App canvas {
   border: 1px solid black;
   margin: 8px;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
