added toggle functionality and button for faceted/smooth geometry in spherepage.js, also fixed some css

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ h1 {
   font-size: 40px;
 }
 
+h2 {
+  text-align: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
